force-app/main/default/objects/WSE__c/WSE__c.object-meta.xml
<CustomObject>
    <label>WSE</label>
    <nameField>
        <displayFormat>WSE{0000000}</displayFormat>
        <label>WSE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WSEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>