force-app/main/default/objects/WSE__c/fields/Active_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Active_Quarter__c</fullName>
    <formula>CEILING( MONTH ( Effective_Date__c  ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>