force-app/main/default/objects/WSE__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <label>April</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>