force-app/main/default/objects/WSE__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <label>August</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>