force-app/main/default/objects/WSE__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <label>December</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>