force-app/main/default/objects/WSE__c/fields/Is_in_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_in_Current_Quarter__c</fullName>
    <formula>AND(
   CEILING( MONTH( Effective_Date__c ) / 3 ) = CEILING( MONTH( TODAY() ) / 3 ), 
   YEAR(Effective_Date__c) = YEAR( TODAY() )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in Current Quarter</label>
    <type>Checkbox</type>
</CustomField>