force-app/main/default/objects/WSE__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <label>July</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>