force-app/main/default/objects/WSE__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <label>June</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>