force-app/main/default/objects/WSE__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <label>November</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>