force-app/main/default/objects/WSE__c/fields/Prior_Mnth_WSE__c.field-meta.xml
<CustomField>
    <fullName>Prior_Mnth_WSE__c</fullName>
    <label>Prior WSE (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>