force-app/main/default/objects/WSE__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KNEES</fullName>
            </value>
            <value>
                <fullName>HIPS</fullName>
            </value>
            <value>
                <fullName>CEMENT</fullName>
            </value>
            <value>
                <fullName>EXTREMITIES</fullName>
            </value>
            <value>
                <fullName>SPORTS MEDICINE</fullName>
            </value>
            <value>
                <fullName>EARLY INTERVENTION</fullName>
            </value>
            <value>
                <fullName>TRAUMA</fullName>
            </value>
            <value>
                <fullName>FOOT &amp; ANKLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>