force-app/main/default/objects/WSE__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <label>September</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>