force-app/main/default/objects/WSE__c/fields/Target_Mnth__c.field-meta.xml
<CustomField>
    <fullName>Target_Mnth__c</fullName>
    <label>Target (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>