force-app/main/default/objects/WSE__c/fields/Target_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Target_Qtr__c</fullName>
    <label>Target (Q)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>