force-app/main/default/objects/WSE__c/fields/Territory2Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory2Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>