force-app/main/default/objects/WSE__c/fields/Vs_Prior_WSE_Amt_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Vs_Prior_WSE_Amt_Qtr__c</fullName>
    <label>Vs Prior WSE $ (Q)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>