force-app/main/default/objects/WSE__c/fields/Vs_Prior_WSE_Pct_Mnth__c.field-meta.xml
<CustomField>
    <fullName>Vs_Prior_WSE_Pct_Mnth__c</fullName>
    <label>Vs Prior WSE % (M)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>