force-app/main/default/objects/WSE__c/fields/WSE_Qtr__c.field-meta.xml
<CustomField>
    <fullName>WSE_Qtr__c</fullName>
    <label>WSE (Q)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>