force-app/main/default/objects/WSE__c/fields/WSE_Vs_PY_ADS_Mnth__c.field-meta.xml
<CustomField>
    <fullName>WSE_Vs_PY_ADS_Mnth__c</fullName>
    <label>WSE_Vs_PY_ADS % (M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>