force-app/main/default/objects/WSE__c/recordTypes/Quarter_1.recordType-meta.xml
<RecordType>
    <fullName>Quarter_1</fullName>
    <active>true</active>
    <label>Quarter 1</label>
</RecordType>