force-app/main/default/objects/WSE__c/recordTypes/Quarter_2.recordType-meta.xml
<RecordType>
    <fullName>Quarter_2</fullName>
    <active>true</active>
    <label>Quarter 2</label>
</RecordType>