force-app/main/default/objects/WSE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Prior_Mnth_WSE__c</columns>
    <columns>WSE_Mnth__c</columns>
    <columns>Target_Mnth__c</columns>
    <columns>Vs_Target_Amt_Mnth__c</columns>
    <columns>Vs_Target_Pct_Mnth__c</columns>
    <columns>Vs_Prior_WSE_Amt_Mnth__c</columns>
    <columns>Vs_Prior_WSE_Pct_Mnth__c</columns>
    <columns>Prior_Qtr_WSE__c</columns>
    <columns>WSE_Qtr__c</columns>
    <columns>Target_Qtr__c</columns>
    <columns>Territory2Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>