force-app/main/default/objects/WSE__c/listViews/Q_ALASKA_BARTOW_0095_WSE.listView-meta.xml
<ListView>
    <fullName>Q_ALASKA_BARTOW_0095_WSE</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_in_Current_Quarter__c</columns>
    <columns>Active_Quarter__c</columns>
    <columns>Prior_Mnth_WSE__c</columns>
    <columns>WSE_Mnth__c</columns>
    <columns>WSE_Qtr__c</columns>
    <columns>Target_Mnth__c</columns>
    <columns>Target_Qtr__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>ALASKA (BARTOW) (0095) QUEUE</label>
    <queue>Q_ALASKA_BARTOW_0095</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>