force-app/main/default/objects/WSE__c/listViews/Q_APEX_SURGICALFOXGATTEN_0039_WSE.listView-meta.xml
<ListView>
    <fullName>Q_APEX_SURGICALFOXGATTEN_0039_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>APEX SURGICAL(FOX-GATTEN) (0039) QUEUE</label>
    <queue>Q_APEX_SURGICALFOXGATTEN_0039</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>