force-app/main/default/objects/WSE__c/listViews/Q_BONEAFIDE_ORTHOZERINGUE_0047_WSE.listView-meta.xml
<ListView>
    <fullName>Q_BONEAFIDE_ORTHOZERINGUE_0047_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>BONEAFIDE ORTHO(ZERINGUE) (0047) QUEUE</label>
    <queue>Q_BONEAFIDE_ORTHOZERINGUE_0047</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>