force-app/main/default/objects/WSE__c/listViews/Q_DAVIS_0019_WSE.listView-meta.xml
<ListView>
    <fullName>Q_DAVIS_0019_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>DAVIS (0019) QUEUE</label>
    <queue>Q_DAVIS_0019</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>