force-app/main/default/objects/WSE__c/listViews/Q_GR_LKS_FUMEILOCRICCHIO_0043_WSE.listView-meta.xml
<ListView>
    <fullName>Q_GR_LKS_FUMEILOCRICCHIO_0043_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>GR LKS (FUMEI-LOCRICCHIO) (0043) QUEUE</label>
    <queue>Q_GR_LKS_FUMEILOCRICCHIO_0043</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>