force-app/main/default/objects/WSE__c/listViews/Q_HIBBARD_0015_WSE.listView-meta.xml
<ListView>
    <fullName>Q_HIBBARD_0015_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>HIBBARD (0015) QUEUE</label>
    <queue>Q_HIBBARD_0015</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>