force-app/main/default/objects/WSE__c/listViews/Q_JNT_MED_CONCEPTS_PARKER_0058_WSE.listView-meta.xml
<ListView>
    <fullName>Q_JNT_MED_CONCEPTS_PARKER_0058_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>JNT MED CONCEPTS (PARKER) (0058) QUEUE</label>
    <queue>Q_JNT_MED_CONCEPTS_PARKER_0058</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>