force-app/main/default/objects/WSE__c/listViews/Q_LEGACY_ORTHOCOOKPERHACS_0022_WSE.listView-meta.xml
<ListView>
    <fullName>Q_LEGACY_ORTHOCOOKPERHACS_0022_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>LEGACY ORTHO(COOK-PERHACS (0022) QUEUE</label>
    <queue>Q_LEGACY_ORTHOCOOKPERHACS_0022</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>