force-app/main/default/objects/WSE__c/listViews/Q_MIDAMERICA_HOLINKA_0024_WSE.listView-meta.xml
<ListView>
    <fullName>Q_MIDAMERICA_HOLINKA_0024_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>MIDAMERICA (HOLINKA) (0024) QUEUE</label>
    <queue>Q_MIDAMERICA_HOLINKA_0024</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>