force-app/main/default/objects/WSE__c/listViews/Q_MIDARK_SURGICAL_NIPPS_0031_WSE.listView-meta.xml
<ListView>
    <fullName>Q_MIDARK_SURGICAL_NIPPS_0031_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>MIDARK SURGICAL (NIPPS) (0031) QUEUE</label>
    <queue>Q_MIDARK_SURGICAL_NIPPS_0031</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>