force-app/main/default/objects/WSE__c/listViews/Q_MIDOHIO_GRAHAM_0061_WSE.listView-meta.xml
<ListView>
    <fullName>Q_MIDOHIO_GRAHAM_0061_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>MID-OHIO (GRAHAM) (0061) QUEUE</label>
    <queue>Q_MIDOHIO_GRAHAM_0061</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>