force-app/main/default/objects/WSE__c/listViews/Q_OREGON_DUFFY_0045_WSE.listView-meta.xml
<ListView>
    <fullName>Q_OREGON_DUFFY_0045_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>OREGON (DUFFY) (0045) QUEUE</label>
    <queue>Q_OREGON_DUFFY_0045</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>