force-app/main/default/objects/WSE__c/listViews/Q_ORTHOSOLUOLIVERSTANBERY_0065_WSE.listView-meta.xml
<ListView>
    <fullName>Q_ORTHOSOLUOLIVERSTANBERY_0065_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>ORTHOSOLU(OLIVER-STANBERY (0065) QUEUE</label>
    <queue>Q_ORTHOSOLUOLIVERSTANBERY_0065</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>