force-app/main/default/objects/WSE__c/listViews/Q_PREMIER_ORTH_VON_SAVOYE_0094_WSE.listView-meta.xml
<ListView>
    <fullName>Q_PREMIER_ORTH_VON_SAVOYE_0094_WSE</fullName>
    <filterScope>Queue</filterScope>
    <label>PREMIER ORTH (VON SAVOYE) (0094) QUEUE</label>
    <queue>Q_PREMIER_ORTH_VON_SAVOYE_0094</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>